--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "webcam-control-stream-service",
-  "version": "1.0.0",
-  "description": "control resource over webcam",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "build": "cd webcam-control-stream-client && npm run build && cd ..",
+    "postinstall": "cd webcam-control-stream-client && npm install && cd .."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/polesskiy-dev/webcam-control-stream-service.git"
-  },
-  "author": "Polisskyi",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/polesskiy-dev/webcam-control-stream-service/issues"
-  },
-  "homepage": "https://github.com/polesskiy-dev/webcam-control-stream-service#readme"
+  "dependencies": {
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.0",
+    "ws": "^7.0.1"
+  }
 }
