--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node index.js",
+    "start": "node_modules/.bin/pm2 start bin/www -- --port 3001 --name webcam-control-stream-service --log webcam-control-stream-service.log.txt --time",
+    "stop": "node_modules/.bin/pm2 stop webcam-control-stream-service",
     "build": "cd webcam-control-stream-client && npm run build && cd ..",
     "postinstall": "cd webcam-control-stream-client && npm install && cd .."
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "pm2": "^3.5.1",
     "ws": "^7.0.1"
   }
 }
