--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node_modules/.bin/pm2 start bin/www -- --port 3001 --name webcam-control-stream-service --log webcam-control-stream-service.log.txt --time",
-    "stop": "node_modules/.bin/pm2 stop webcam-control-stream-service",
+    "start": "node_modules/.bin/pm2 start bin/www -- --port 3001 --log webcam-control-stream-service.log.txt --time",
+    "stop": "node_modules/.bin/pm2 stop www",
+    "log": "node_modules/.bin/pm2 logs",
     "build": "cd webcam-control-stream-client && npm run build && cd ..",
     "postinstall": "cd webcam-control-stream-client && npm install && cd .."
   },
